syntax = "proto3";

option go_package = "/types";

service Repo {
  rpc GetFile (GetFileRequest) returns (GetFileReply);
  rpc AddFile (AddFileRequest) returns (AddFileReply);
  rpc GetAllFileNames (GetAllFileNamesRequest) returns (GetAllFileNamesReply);
}

message GetAllFileNamesRequest{
}

message GetAllFileNamesReply {
    repeated TenantFiles files = 1;
}

message TenantFiles  {
	string tenantId=1; 
	repeated string files=2; 
}

message AddFileRequest{
    string tenantId = 1;
    string name = 2;
    bytes file = 3;
}

message AddFileReply {
    bytes file = 1; 
}

message GetFileRequest{
    string tenantId = 1;
    string name = 2;
}

message GetFileReply {
    bytes file = 1; 
}