syntax = "proto3";

option go_package = "/types";

import "common.proto";

service Control {
  rpc Tenants (TenantsRequest) returns (TenantsReply) {}
  rpc AddTenant (AddTenantRequest) returns (AddTenantReply) {}
  rpc AddPackage (AddPackageRequest) returns (AddPackageReply) {}
  rpc AllPackages (Void) returns (AllPackagesReply) {}
  rpc Packages (PackagesRequest) returns (PackagesReply) {}
  rpc UpdatePackage (UpdatePackageRequest) returns (Void) {}
  rpc DeletePackage (DeletePackageRequest) returns (Void) {}
  rpc UpdateToPackagesStr (UpdateToPackagesStrRequest) returns (stream UpdateToPackagesStrReply) {}
  rpc Environment(Void) returns (EnvironmentReply){}
  rpc UpdateToEnvironmentStr(Void) returns (stream UpdateToEnvironmentStrReply){}
  rpc AddEnvironment(AddEnvironmentRequest) returns (AddEnvironmentReply){}
  rpc UpdateEnvironment(UpdateEnvironmentRequest) returns (Void){}
}



message UpdateToEnvironmentStrReply {
  UpdateType type=1;
  Environment object = 2;
}

message UpdateToPackagesStrRequest{
  string tenant = 1; //  not supported
}

message UpdateToPackagesStrReply{
  UpdateType type=1;
  JobPackage object = 2;
}

message AddPackageRequest{
  JobPackage package = 1;
}
message AddPackageReply{
  JobPackage package = 1;
}
message AllPackagesReply{
  repeated JobPackage packages = 1;
}
message PackagesRequest{
  string tenant = 1;  
  optional string ID = 2; 
}
message PackagesReply{
  repeated JobPackage packages = 1;
}
message UpdatePackageRequest{
  JobPackage package = 1;
}
message DeletePackageRequest{
  JobPackage package = 1;
}

message EnvironmentReply {
  optional Environment environment = 1;
}

message AddEnvironmentRequest {
  Environment environment = 1;
}

message UpdateEnvironmentRequest {
  Environment environment = 1;
}

message AddEnvironmentReply {
  Environment environment = 1;
}


message TenantsRequest {
  optional string ID = 1;
  optional string tenant=2;
}

message TenantsReply {
  repeated Tenant Tenants=1;
}

message AddTenantRequest {
  Tenant tenant=1;
}

message AddTenantReply {
  Tenant tenant=1;
}


message Environment{
  string ID = 1;
  repeated Service services=2;
  optional Tenant tenant=3; // for future
}

message Service {
  string ID = 1;
  optional string name = 2;
  repeated Host servers = 3;
  repeated Storage storages = 4;
}

message Storage {
  string ID = 1;
  optional string Name = 2;
  string reference = 3;
  StorageType type = 4;
}

enum StorageType {
  LocalDirectory = 0;
}

message JobPackage {
    string ID = 1;
    optional string name = 2;
    string tenant = 3;
    repeated QueueDef queues = 4;
    repeated JobDef jobs = 5;
    repeated RuntimeDef runtimes = 6;
}

message Tenant {
  string ID = 1;
  optional string Name = 2;
}

message QueueDef {
  string ID = 1;
  optional string name = 2;
}


message RuntimeDef{
  string ID = 1;
  optional string name = 2;
  string moduleRef = 3;
  optional string mainFuncName = 4;
  RuntimeType type = 5;
  optional Platform platform = 6;
}

enum RuntimeType {
  Wasm10 = 0;
  Go = 1;
}

enum Platform {
  TinyGO = 0;
}

message JobDef {
  EventDef event = 1;
  optional ResultDef result = 2;
}

message ResultDef {
  optional EventDef ok = 1;
  optional EventDef error = 2;
}

message EventDef {
  string ID = 1;
  optional string name = 2;
  DataType dataType = 3;
  optional SchemaDef schema = 4;
  string supplierQueue = 5;
  string runtime = 6;
}

enum DataType {
  Json = 0;
}

message SchemaDef {
    string ID = 1;
    optional string name = 2;
    string schemaRef = 3;
}
